tests/checker/ok/repetition_unbounded.can
Bit = One + Zero

Byte = Bit^8

Bytes = Byte^*

BytesSlot = Option<Bytes>

Unit => Program {
    None() -> BytesSlot
    "kleene star type defined" -> Print
}
